Initial port to MCreator 2021.2

--- a/src/fabric-1.16.5/mappings/potions.yaml
+++ b/src/fabric-1.16.5/mappings/potions.yaml
@@ -1,35 +1,46 @@
-_default: StatusEffects.SPEED
+_default: Potions.EMPTY
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@NAMEPotion.potion"
-SPEED: StatusEffects.SPEED
-SLOWNESS: StatusEffects.SLOWNESS
-HASTE: StatusEffects.HASTE
-MINING_FATIGUE: StatusEffects.MINING_FATIGUE
-STRENGTH: StatusEffects.STRENGTH
-INSTANT_HEALTH: StatusEffects.INSTANT_HEALTH
-INSTANT_DAMAGE: StatusEffects.INSTANT_DAMAGE
-JUMP_BOOST: StatusEffects.JUMP_BOOST
-NAUSEA: StatusEffects.NAUSEA
-REGENERATION: StatusEffects.REGENERATION
-RESISTANCE: StatusEffects.RESISTANCE
-FIRE_RESISTANCE: StatusEffects.FIRE_RESISTANCE
-WATER_BREATHING: StatusEffects.WATER_BREATHING
-INVISIBILITY: StatusEffects.INVISIBILITY
-BLINDNESS: StatusEffects.BLINDNESS
-NIGHT_VISION: StatusEffects.NIGHT_VISION
-HUNGER: StatusEffects.HUNGER
-WEAKNESS: StatusEffects.WEAKNESS
-POISON: StatusEffects.POISON
-WITHER: StatusEffects.WITHER
-HEALTH_BOOST: StatusEffects.HEALTH_BOOST
-ABSORPTION: StatusEffects.ABSORPTION
-SATURATION: StatusEffects.SATURATION
-GLOWING: StatusEffects.GLOWING
-LEVITATION: StatusEffects.LEVITATION
-LUCK: StatusEffects.LUCK
-UNLUCK: StatusEffects.UNLUCK
-SLOW_FALLING: StatusEffects.SLOW_FALLING
-CONDUIT_POWER: StatusEffects.CONDUIT_POWER
-DOLPHINS_GRACE: StatusEffects.DOLPHINS_GRACE
-BAD_OMEN: StatusEffects.BAD_OMEN
-HERO_OF_THE_VILLAGE: StatusEffects.HERO_OF_THE_VILLAGE
+_mcreator_map_template: "@JavaModName.@NAMEPotion_POTION"
+EMPTY: Potions.EMPTY
+WATER: Potions.WATER
+MUNDANE: Potions.MUNDANE
+THICK: Potions.THICK
+AWKWARD: Potions.AWKWARD
+NIGHT_VISION: Potions.NIGHT_VISION
+LONG_NIGHT_VISION: Potions.LONG_NIGHT_VISION
+INVISIBILITY: Potions.INVISIBILITY
+LONG_INVISIBILITY: Potions.LONG_INVISIBILITY
+LEAPING: Potions.LEAPING
+LONG_LEAPING: Potions.LONG_LEAPING
+STRONG_LEAPING: Potions.STRONG_LEAPING
+FIRE_RESISTANCE: Potions.FIRE_RESISTANCE
+LONG_FIRE_RESISTANCE: Potions.LONG_FIRE_RESISTANCE
+SWIFTNESS: Potions.SWIFTNESS
+LONG_SWIFTNESS: Potions.LONG_SWIFTNESS
+STRONG_SWIFTNESS: Potions.STRONG_SWIFTNESS
+SLOWNESS: Potions.SLOWNESS
+LONG_SLOWNESS: Potions.LONG_SLOWNESS
+STRONG_SLOWNESS: Potions.STRONG_SLOWNESS
+TURTLE_MASTER: Potions.TURTLE_MASTER
+LONG_TURTLE_MASTER: Potions.LONG_TURTLE_MASTER
+STRONG_TURTLE_MASTER: Potions.STRONG_TURTLE_MASTER
+WATER_BREATHING: Potions.WATER_BREATHING
+LONG_WATER_BREATHING: Potions.LONG_WATER_BREATHING
+HEALING: Potions.HEALING
+STRONG_HEALING: Potions.STRONG_HEALING
+HARMING: Potions.HARMING
+STRONG_HARMING: Potions.STRONG_HARMING
+POISON: Potions.POISON
+LONG_POISON: Potions.LONG_POISON
+STRONG_POISON: Potions.STRONG_POISON
+REGENERATION: Potions.REGENERATION
+LONG_REGENERATION: Potions.LONG_REGENERATION
+STRONG_REGENERATION: Potions.STRONG_REGENERATION
+STRENGTH: Potions.STRENGTH
+LONG_STRENGTH: Potions.LONG_STRENGTH
+STRONG_STRENGTH: Potions.STRONG_STRENGTH
+WEAKNESS: Potions.WEAKNESS
+LONG_WEAKNESS: Potions.LONG_WEAKNESS
+LUCK: Potions.LUCK
+SLOW_FALLING: Potions.SLOW_FALLING
+LONG_SLOW_FALLING: Potions.LONG_SLOW_FALLING
