--- a/src/fabric-1.16.5/mappings/types.yaml
+++ b/src/fabric-1.16.5/mappings/types.yaml
@@ -1,9 +1,13 @@
 _default: Object
-world: World
 number: double
-entity: Entity
-itemstack: ItemStack
-map: HashMap
 string: String
-boolean: boolean
+logic: boolean
+blockstate: BlockState
+itemstack: ItemStack
 direction: Direction
+world: World
+entity: Entity
+map: HashMap
+advancement: Advancement
+dimensiontype: RegistryKey<World>
+actionresulttype: ActionResult
