--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,16 @@ task launch {
     dependsOn install
     doLast {
         System.out.println("Launching MCreator...")
-        if (Globals.getOSName().contains('mac') || Globals.getOSName().contains('OS X') || Globals.getOSName().contains('linux')) {
+        if (Globals.getOSName().contains('windows')) {
+            try {
+                exec {
+                    workingDir "C://Program Files/Pylo/MCreatorEAP20212b33614/"
+                    commandLine 'cmd', '/c', 'mcreator.bat'
+                }
+            } catch (IOException e) {
+                throw new RuntimeException("Could not launch MCreator! Please make sure you have installed it to C://Program Files/", e)
+            }
+        } /* else if (Globals.getOSName().contains('mac') || Globals.getOSName().contains('OS X') || Globals.getOSName().contains('linux')) {
             try {
                 ProcessBuilder builder = new ProcessBuilder("/Applications/MCreator.app/Contents/MacOS/mcreator")
                 builder.redirectOutput(ProcessBuilder.Redirect.INHERIT)
@@ -49,16 +58,7 @@ task launch {
             } catch (IOException e) {
                 throw new RuntimeException("Could not launch MCreator! Please make sure you have installed it to /Applications/", e)
             }
-        } else if (Globals.getOSName().contains('windows')) {
-            try {
-                exec {
-                    workingDir "C://Program Files/Pylo/MCreator/"
-                    commandLine 'cmd', '/c', 'mcreator.bat'
-                }
-            } catch (IOException e) {
-                throw new RuntimeException("Could not launch MCreator! Please make sure you have installed it to C://Program Files/", e)
-            }
-        }
+        } */
     }
 }
 
