--- a/src/fabric-1.16.5/potion.definition.yaml
+++ b/src/fabric-1.16.5/potion.definition.yaml
@@ -1,18 +1,13 @@
 templates:
   - template: potion.java.ftl
-    name: "@SRCROOT/@BASEPACKAGEPATH/potion/@NAMEEffect.java"
+    name: "@SRCROOT/@BASEPACKAGEPATH/potion/@NAMEPotion.java"
 
 localizationkeys:
-  - key: effect.@modid.@registryname
-    mapto: effectName
-  - key: item.minecraft.potion.effect.@registryname_potion
-    mapto: name
-  - key: item.minecraft.splash_potion.effect.@registryname_potion
-    mapto: name
-    prefix: "Splash "
-  - key: item.minecraft.tipped_arrow.effect.@registryname_potion
-    mapto: name
-    prefix: "Arrow of "
-  - key: item.minecraft.lingering_potion.effect.@registryname_potion
-    mapto: name
-    prefix: "Lingering "
+  - key: item.minecraft.potion.effect.@registryname
+    mapto: potionName
+  - key: item.minecraft.splash_potion.effect.@registryname
+    mapto: splashName
+  - key: item.minecraft.lingering_potion.effect.@registryname
+    mapto: lingeringName
+  - key: item.minecraft.tipped_arrow.effect.@registryname
+    mapto: arrowName
