--- a/src/fabric-1.16.5/generator.yaml
+++ b/src/fabric-1.16.5/generator.yaml
@@ -30,6 +30,9 @@ base_templates:
 - template: modbase/client.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/ClientInit.java"
   canLock: true
+- template: modbase/variableslist.java.ftl
+  name: "@SRCROOT/@BASEPACKAGEPATH/@JavaModNameVariables.java"
+  condition: hasVariables()
 - template: modbase/listener.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/IListener.java"
   canLock: true
