--- a/src/fabric-1.16.5/variables/number.yaml
+++ b/src/fabric-1.16.5/variables/number.yaml
@@ -1,10 +1,10 @@
-defaultvalue: false
+defaultvalue: 0
 scopes:
   local:
     init: ${var.getType().getJavaType(generator.getWorkspace())} ${var.getName()} = ${var.getType().getDefaultValue(generator.getWorkspace())};
     get: ${name}
     set: ${name} = (${javaType}) ${value};
   global_session:
-    init: public static boolean ${var.getName()} = ${var.getValue()};
+    init: public static double ${var.getName()} = ${var.getValue()};
     get: ${JavaModName}Variables.${name}
-    set: ${JavaModName}Variables.${name} = (boolean) ${value};
+    set: ${JavaModName}Variables.${name} = (double) ${value};
