--- a/src/fabric-1.16.5/variables/string.yaml
+++ b/src/fabric-1.16.5/variables/string.yaml
@@ -1,10 +1,10 @@
-defaultvalue: false
+defaultvalue: '""'
 scopes:
   local:
     init: ${var.getType().getJavaType(generator.getWorkspace())} ${var.getName()} = ${var.getType().getDefaultValue(generator.getWorkspace())};
     get: ${name}
     set: ${name} = (${javaType}) ${value};
   global_session:
-    init: public static boolean ${var.getName()} = ${var.getValue()};
+    init: public static String ${var.getName()} = "${JavaConventions.escapeStringForJava(var.getValue())}";
     get: ${JavaModName}Variables.${name}
-    set: ${JavaModName}Variables.${name} = (boolean) ${value};
+    set: ${JavaModName}Variables.${name} = (String) ${value};
