--- a/src/fabric-1.16.5/biome.definition.yaml
+++ b/src/fabric-1.16.5/biome.definition.yaml
@@ -5,3 +5,5 @@ templates:
 localizationkeys:
   - key: biome.@modid.@registryname
     mapto: name
+
+field_exclusions: [ treeVines, treeFruits, biomeDictionaryTypes ]
