Update block + new block features
Custom sound set, redstone properties, placing condition, on right-clicked and on block placed by triggers

--- a/src/fabric-1.16.5/block.definition.yaml
+++ b/src/fabric-1.16.5/block.definition.yaml
@@ -288,3 +288,7 @@ templates:
 localizationkeys:
   - key: block.@modid.@registryname
     mapto: name
+
+field_exclusions: [ tintType, isItemTinted, isWaterloggable, displayFluidOverlay, plantsGrowOn, beaconColorModifier, isLadder, enchantPowerBonus, aiPathNodeType, hasInventory,
+                    openGUIOnRightClick, guiBoundTo, inventorySize, inventoryStackSize, inventoryDropWhenDestroyed, inventoryComparatorPower, outSlotIDs, inSlotIDs,
+                    hasEnergyStorage, isFluidTank, energyInitial, energyCapacity, energyMaxReceive, energyMaxExtract, fluidCapacity, fluidRestrictions, pane8 ]
