--- a/src/fabric-1.16.5/block.definition.yaml
+++ b/src/fabric-1.16.5/block.definition.yaml
@@ -285,6 +285,63 @@ templates:
     writer: json
     name: "@MODASSETSROOT/models/block/@registryname_wall_open.json"
 
+  # TX: EndRod template
+  - template: json/block_item.json.ftl
+    condition: "blockBase %= EndRod"
+    writer: json
+    name: "@MODASSETSROOT/models/item/@registryname.json"
+  - template: json/txblock/end_rod_states.json.ftl
+    condition: "blockBase %= EndRod"
+    writer: json
+    name: "@MODASSETSROOT/blockstates/@registryname.json"
+  - template: json/txblock/end_rod.json.ftl
+    condition: "blockBase %= EndRod"
+    writer: json
+    name: "@MODASSETSROOT/models/block/@registryname.json"
+
+  # TX: PressurePlate templates
+  - template: json/txblock/pressure_plate_item.json.ftl
+    condition: "blockBase %= PressurePlate"
+    writer: json
+    name: "@MODASSETSROOT/models/item/@registryname.json"
+  - template: json/txblock/pressure_plate_states.json.ftl
+    condition: "blockBase %= PressurePlate"
+    writer: json
+    name: "@MODASSETSROOT/blockstates/@registryname.json"
+  - template: json/txblock/pressure_plate.json.ftl
+    condition: "blockBase %= PressurePlate"
+    writer: json
+    name: "@MODASSETSROOT/models/block/@registryname.json"
+  - template: json/txblock/pressure_plate_down.json.ftl
+    deleteWhenConditionFalse: true
+    condition: "blockBase %= PressurePlate"
+    writer: json
+    name: "@MODASSETSROOT/models/block/@registryname_down.json"
+
+  # TX: Button templates
+  - template: json/txblock/button_item.json.ftl
+    condition: "blockBase %= Button"
+    writer: json
+    name: "@MODASSETSROOT/models/item/@registryname.json"
+  - template: json/txblock/button_states.json.ftl
+    condition: "blockBase %= Button"
+    writer: json
+    name: "@MODASSETSROOT/blockstates/@registryname.json"
+  - template: json/txblock/button.json.ftl
+    condition: "blockBase %= Button"
+    writer: json
+    name: "@MODASSETSROOT/models/block/@registryname.json"
+  - template: json/txblock/button_pressed.json.ftl
+    deleteWhenConditionFalse: true
+    condition: "blockBase %= Button"
+    writer: json
+    name: "@MODASSETSROOT/models/block/@registryname_pressed.json"
+  - template: json/txblock/button_inventory.json.ftl
+    deleteWhenConditionFalse: true
+    condition: "blockBase %= Button"
+    writer: json
+    name: "@MODASSETSROOT/models/block/@registryname_inventory.json"
+
 localizationkeys:
   - key: block.@modid.@registryname
     mapto: name
