Update living entity and music disc

--- a/src/fabric-1.16.5/livingentity.definition.yaml
+++ b/src/fabric-1.16.5/livingentity.definition.yaml
@@ -15,3 +15,5 @@ localizationkeys:
     suffix: " Spawn Egg"
   - key: entity.@modid.@registryname
     mapto: mobName
+
+field_exclusions: [ flyingMob, guiBoundTo, inventoryStackSize, inventorySize, spawnInDungeons, ranged, rangedItemType, rangedAttackItem ]
