Update plants + new features

--- a/src/fabric-1.16.5/block.definition.yaml
+++ b/src/fabric-1.16.5/block.definition.yaml
@@ -348,4 +348,4 @@ localizationkeys:
 
 field_exclusions: [ tintType, isItemTinted, isWaterloggable, displayFluidOverlay, plantsGrowOn, beaconColorModifier, isLadder, enchantPowerBonus, aiPathNodeType, hasInventory,
                     openGUIOnRightClick, guiBoundTo, inventorySize, inventoryStackSize, inventoryDropWhenDestroyed, inventoryComparatorPower, outSlotIDs, inSlotIDs,
-                    hasEnergyStorage, isFluidTank, energyInitial, energyCapacity, energyMaxReceive, energyMaxExtract, fluidCapacity, fluidRestrictions, pane8 ]
+                    hasEnergyStorage, isFluidTank, energyInitial, energyCapacity, energyMaxReceive, energyMaxExtract, fluidCapacity, fluidRestrictions ]
