--- a/src/fabric-1.16.5/plant.definition.yaml
+++ b/src/fabric-1.16.5/plant.definition.yaml
@@ -24,3 +24,5 @@ templates:
 localizationkeys:
   - key: block.@modid.@registryname
     mapto: name
+
+field_exclusions: [ tintType, isItemTinted, aiPathNodeType, growapableSpawnType ]
