--- a/src/fabric-1.16.5/biome.definition.yaml
+++ b/src/fabric-1.16.5/biome.definition.yaml
@@ -6,4 +6,4 @@ localizationkeys:
   - key: biome.@modid.@registryname
     mapto: name
 
-field_exclusions: [ treeVines, treeFruits, biomeDictionaryTypes ]
+field_exclusions: [ treeVines, treeFruits ]
