Fix BerryBushes default feature

--- a/src/fabric-1.16.5/mappings/defaultfeatures.yaml
+++ b/src/fabric-1.16.5/mappings/defaultfeatures.yaml
@@ -1,6 +1,6 @@
 _default: null
 Bamboo: BambooJungleTrees
-BerryBushes: SweeBerryBushes
+BerryBushes: SweetBerryBushes
 Caves: LandCarvers
 DeadBushes: DesertDeadBushes
 DesertFeatures: DesertFeatures
