Changelog + Disable the unsupported trigger

--- a/src/fabric-1.16.5/gui.definition.yaml
+++ b/src/fabric-1.16.5/gui.definition.yaml
@@ -3,3 +3,5 @@ templates:
     name: "@SRCROOT/@BASEPACKAGEPATH/screen/@NAMEGui.java"
   - template: gui_window.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/client/gui/screen/@NAMEGuiWindow.java"
+
+field_exclusions: [onTick]
