--- a/src/fabric-1.16.5/block.definition.yaml
+++ b/src/fabric-1.16.5/block.definition.yaml
@@ -346,6 +346,5 @@ localizationkeys:
   - key: block.@modid.@registryname
     mapto: name
 
-field_exclusions: [ tintType, isItemTinted, isWaterloggable, displayFluidOverlay, plantsGrowOn, beaconColorModifier, isLadder, enchantPowerBonus, aiPathNodeType, hasInventory,
-                    openGUIOnRightClick, guiBoundTo, inventorySize, inventoryStackSize, inventoryDropWhenDestroyed, inventoryComparatorPower, outSlotIDs, inSlotIDs,
+field_exclusions: [ tintType, isItemTinted, isWaterloggable, displayFluidOverlay, plantsGrowOn, beaconColorModifier, isLadder, enchantPowerBonus, aiPathNodeType,
                     hasEnergyStorage, isFluidTank, energyInitial, energyCapacity, energyMaxReceive, energyMaxExtract, fluidCapacity, fluidRestrictions ]
