--- a/src/fabric-1.16.5/item.definition.yaml
+++ b/src/fabric-1.16.5/item.definition.yaml
@@ -15,4 +15,4 @@ localizationkeys:
     mapto: name
 
 field_exclusions: [ onEntitySwing, onDroppedByPlayer, stayInGridWhenCrafting, damageOnCrafting, hasDispenseBehavior, dispenseSuccessCondition,
-                    dispenseResultItemstack, guiBoundTo, inventorySize, inventoryStackSize ]
+                    dispenseResultItemstack ]
