--- a/src/fabric-1.16.5/livingentity.definition.yaml
+++ b/src/fabric-1.16.5/livingentity.definition.yaml
@@ -16,4 +16,4 @@ localizationkeys:
   - key: entity.@modid.@registryname
     mapto: mobName
 
-field_exclusions: [ flyingMob, spawnInDungeons, ranged, rangedItemType, rangedAttackItem ]
+field_exclusions: [ spawnInDungeons, ranged, rangedItemType, rangedAttackItem ]
