Custom dispenser behaviour

--- a/src/fabric-1.16.5/item.definition.yaml
+++ b/src/fabric-1.16.5/item.definition.yaml
@@ -14,5 +14,4 @@ localizationkeys:
   - key: item.@modid.@registryname
     mapto: name
 
-field_exclusions: [ onEntitySwing, onDroppedByPlayer, stayInGridWhenCrafting, damageOnCrafting, hasDispenseBehavior, dispenseSuccessCondition,
-                    dispenseResultItemstack ]
+field_exclusions: [ onEntitySwing, onDroppedByPlayer, stayInGridWhenCrafting, damageOnCrafting]
