Change item support status

--- a/src/fabric-1.16.5/generator.yaml
+++ b/src/fabric-1.16.5/generator.yaml
@@ -1,6 +1,6 @@
 name: Minecraft Fabric for 1.16.5 - @buildfileversion
 basefeatures: [model_json, model_java]
-partial_support: [armor, block, dimension, item, mob, plant, procedure, rangeditem]
+partial_support: [armor, block, dimension, livingentity, plant, procedure, rangeditem]
 status: dev
 buildfileversion: 0.37.1
 subversion: 1.2
