Does item stay in crafting grid support for tools #111 part 2

--- a/src/fabric-1.16.5/tool.definition.yaml
+++ b/src/fabric-1.16.5/tool.definition.yaml
@@ -14,4 +14,4 @@ localizationkeys:
   - key: item.@modid.@registryname
     mapto: name
 
-field_exclusions: [ onEntitySwing, stayInGridWhenCrafting ]
+field_exclusions: [ onEntitySwing ]
