--- a/src/fabric-1.17.1/mappings/achievements.yaml
+++ b/src/fabric-1.17.1/mappings/achievements.yaml
@@ -20,27 +20,27 @@ story/follow_ender_eye: minecraft:story/follow_ender_eye
 story/enter_the_end: minecraft:story/enter_the_end
 nether/root: minecraft:nether/root
 nether/return_to_sender: minecraft:nether/return_to_sender
+nether/find_bastion: minecraft:nether/find_bastion
+nether/obtain_ancient_debris: minecraft:nether/obtain_ancient_debris
 nether/fast_travel: minecraft:nether/fast_travel
 nether/find_fortress: minecraft:nether/find_fortress
+nether/obtain_crying_obsidian: minecraft:nether/obtain_crying_obsidian
+nether/distract_piglin: minecraft:nether/distract_piglin
+nether/ride_strider: minecraft:nether/ride_strider
 nether/uneasy_alliance: minecraft:nether/uneasy_alliance
+nether/loot_bastion: minecraft:nether/loot_bastion
+nether/use_lodestone: minecraft:nether/use_lodestone
+nether/netherite_armor: minecraft:nether/netherite_armor
 nether/get_wither_skull: minecraft:nether/get_wither_skull
 nether/obtain_blaze_rod: minecraft:nether/obtain_blaze_rod
+nether/charge_respawn_anchor: minecraft:nether/charge_respawn_anchor
+nether/explore_nether: minecraft:nether/explore_nether
 nether/summon_wither: minecraft:nether/summon_wither
 nether/brew_potion: minecraft:nether/brew_potion
 nether/create_beacon: minecraft:nether/create_beacon
 nether/all_potions: minecraft:nether/all_potions
 nether/create_full_beacon: minecraft:nether/create_full_beacon
 nether/all_effects: minecraft:nether/all_effects
-nether/find_bastion: minecraft:nether/find_bastion
-nether/obtain_ancient_debris: minecraft:nether/obtain_ancient_debris
-nether/obtain_crying_obsidian: minecraft:nether/obtain_crying_obsidian
-nether/distract_piglin: minecraft:nether/distract_piglin
-nether/ride_strider: minecraft:nether/ride_strider
-nether/loot_bastion: minecraft:nether/loot_bastion
-nether/use_lodestone: minecraft:nether/use_lodestone
-nether/netherite_armor: minecraft:nether/netherite_armor
-nether/charge_respawn_anchor: minecraft:nether/charge_respawn_anchor
-nether/explore_nether: minecraft:nether/explore_nether
 end/root: minecraft:end/root
 end/kill_dragon: minecraft:end/kill_dragon
 end/dragon_egg: minecraft:end/dragon_egg
@@ -70,6 +70,11 @@ adventure/adventuring_time: minecraft:adventure/adventuring_time
 adventure/very_very_frightening: minecraft:adventure/very_very_frightening
 adventure/sniper_duel: minecraft:adventure/sniper_duel
 adventure/bullseye: minecraft:adventure/bullseye
+adventure/lightning_rod_with_villager_no_fire: minecraft:adventure/lightning_rod_with_villager_no_fire
+adventure/spyglass_at_dragon: minecraft:adventure/spyglass_at_dragon
+adventure/spyglass_at_ghast: minecraft:adventure/spyglass_at_ghast
+adventure/spyglass_at_parrot: minecraft:adventure/spyglass_at_parrot
+adventure/walk_on_powder_snow_with_leather_boots: minecraft:adventure/walk_on_powder_snow_with_leather_boots
 husbandry/root: minecraft:husbandry/root
 husbandry/safely_harvest_honey: minecraft:husbandry/safely_harvest_honey
 husbandry/breed_an_animal: minecraft:husbandry/breed_an_animal
@@ -77,9 +82,14 @@ husbandry/tame_an_animal: minecraft:husbandry/tame_an_animal
 husbandry/fishy_business: minecraft:husbandry/fishy_business
 husbandry/silk_touch_nest: minecraft:husbandry/silk_touch_nest
 husbandry/plant_seed: minecraft:husbandry/plant_seed
-husbandry/breed_all_animals: minecraft:husbandry/breed_all_animals
+husbandry/breed_all_animals: minecraft:husbandry/bred_all_animals
 husbandry/complete_catalogue: minecraft:husbandry/complete_catalogue
 husbandry/tactical_fishing: minecraft:husbandry/tactical_fishing
 husbandry/balanced_diet: minecraft:husbandry/balanced_diet
-husbandry/break_diamond_hoe: minecraft:husbandry/break_diamond_hoe
 husbandry/obtain_netherite_hoe: minecraft:husbandry/obtain_netherite_hoe
+husbandry/axolotl_in_a_bucket: minecraft:husbandry/axolotl_in_a_bucket
+husbandry/kill_axolotl_target: minecraft:husbandry/kill_axolotl_target
+husbandry/make_a_sign_glow: minecraft:husbandry/make_a_sign_glow
+husbandry/ride_a_boat_with_a_goat: minecraft:husbandry/ride_a_boat_with_a_goat
+husbandry/wax_off: minecraft:husbandry/wax_off
+husbandry/wax_on: minecraft:husbandry/wax_on
