--- a/src/fabric-1.17.1/mappings/biomes.yaml
+++ b/src/fabric-1.17.1/mappings/biomes.yaml
@@ -1,83 +1,85 @@
-_default: PLAINS
+_default: plains
 _mcreator_prefix: "CUSTOM:"
 _mcreator_map_template: "@modid:@registryname"
 _bypass_prefix: "No parent"
-ocean: OCEAN
-plains: PLAINS
-desert: DESERT
-mountains: MOUNTAINS
-forest: FOREST
-taiga: TAIGA
-swamp: SWAMP
-river: RIVER
-nether: NETHER_WASTES
-the_end: THE_END
-frozen_ocean: FROZEN_OCEAN
-frozen_river: FROZEN_RIVER
-snowy_tundra: SNOWY_TUNDRA
-snowy_mountains: SNOWY_MOUNTAINS
-mushroom_fields: MUSHROOM_FIELDS
-mushroom_field_shore: MUSHROOM_FIELD_SHORE
-beaches: BEACH
-desert_hills: DESERT_HILLS
-forest_hills: WOODED_HILLS
-taiga_hills: TAIGA_HILLS
-smaller_extreme_hills: MOUNTAIN_EDGE
-jungle: JUNGLE
-jungle_hills: JUNGLE_HILLS
-jungle_edge: JUNGLE_EDGE
-deep_ocean: DEEP_OCEAN
-stone_beach: STONE_SHORE
-cold_beach: SNOWY_BEACH
-birch_forest: BIRCH_FOREST
-birch_forest_hills: BIRCH_FOREST_HILLS
-roofed_forest: DARK_FOREST
-taiga_cold: SNOWY_TAIGA
-taiga_cold_hills: SNOWY_TAIGA_HILLS
-redwood_taiga: GIANT_TREE_TAIGA
-redwood_taiga_hills: GIANT_TREE_TAIGA_HILLS
-extreme_hills_with_trees: WOODED_MOUNTAINS
-savanna: SAVANNA
-savanna_rock: SAVANNA_PLATEAU
-badlands: BADLANDS
-wooded_badlands_plateau: WOODED_BADLANDS_PLATEAU
-badlands_plateau: BADLANDS_PLATEAU
-void: THE_VOID
-small_end_islands: SMALL_END_ISLANDS
-end_midlands: END_MIDLANDS
-end_highlands: END_HIGHLANDS
-end_barrens: END_BARRENS
-warm_ocean: WARM_OCEAN
-lukewarm_ocean: LUKEWARM_OCEAN
-cold_ocean: COLD_OCEAN
-deep_warm_ocean: DEEP_WARM_OCEAN
-deep_lukewarm_ocean: DEEP_LUKEWARM_OCEAN
-deep_cold_ocean: DEEP_COLD_OCEAN
-deep_frozen_ocean: DEEP_FROZEN_OCEAN
-mutated_plains: SUNFLOWER_PLAINS
-mutated_desert: DESERT_LAKES
-mutated_extreme_hills: GRAVELLY_MOUNTAINS
-mutated_forest: FLOWER_FOREST
-mutated_taiga: TAIGA_MOUNTAINS
-mutated_swampland: SWAMP_HILLS
-mutated_ice_flats: ICE_SPIKES
-mutated_jungle: MODIFIED_JUNGLE
-mutated_jungle_edge: MODIFIED_JUNGLE_EDGE
-mutated_birch_forest: TALL_BIRCH_FOREST
-mutated_birch_forest_hills: TALL_BIRCH_HILLS
-mutated_roofed_forest: DARK_FOREST_HILLS
-mutated_taiga_cold: SNOWY_TAIGA_MOUNTAINS
-mutated_redwood_taiga: GIANT_SPRUCE_TAIGA
-mutated_redwood_taiga_hills: GIANT_SPRUCE_TAIGA_HILLS
-mutated_extreme_hills_with_trees: MODIFIED_GRAVELLY_MOUNTAINS
-mutated_savanna: SHATTERED_SAVANNA
-mutated_savanna_rock: SHATTERED_SAVANNA_PLATEAU
-mutated_mesa: ERODED_BADLANDS
-mutated_mesa_rock: MODIFIED_WOODED_BADLANDS_PLATEAU
-mutated_mesa_clear_rock: MODIFIED_BADLANDS_PLATEAU
-bamboo_jungle: BAMBOO_JUNGLE
-bamboo_jungle_hills: BAMBOO_JUNGLE_HILLS
-soul_sand_valley: SOUL_SAND_VALLEY
-crimson_forest: CRIMSON_FOREST
-warped_forest: WARPED_FOREST
-basalt_deltas: BASALT_DELTAS
+ocean: ocean
+plains: plains
+desert: desert
+mountains: mountains
+forest: forest
+taiga: taiga
+swamp: swamp
+river: river
+nether: nether_wastes
+the_end: the_end
+frozen_ocean: frozen_ocean
+frozen_river: frozen_river
+snowy_tundra: snowy_tundra
+snowy_mountains: snowy_mountains
+mushroom_fields: mushroom_fields
+mushroom_field_shore: mushroom_field_shore
+beaches: beach
+desert_hills: desert_hills
+forest_hills: wooded_hills
+taiga_hills: taiga_hills
+smaller_extreme_hills: mountain_edge
+jungle: jungle
+jungle_hills: jungle_hills
+jungle_edge: jungle_edge
+deep_ocean: deep_ocean
+stone_beach: stone_shore
+cold_beach: snowy_beach
+birch_forest: birch_forest
+birch_forest_hills: birch_forest_hills
+roofed_forest: dark_forest
+taiga_cold: snowy_taiga
+taiga_cold_hills: snowy_taiga_hills
+redwood_taiga: giant_tree_taiga
+redwood_taiga_hills: giant_tree_taiga_hills
+extreme_hills_with_trees: wooded_mountains
+savanna: savanna
+savanna_rock: savanna_plateau
+badlands: badlands
+wooded_badlands_plateau: wooded_badlands_plateau
+badlands_plateau: badlands_plateau
+void: the_void
+small_end_islands: small_end_islands
+end_midlands: end_midlands
+end_highlands: end_highlands
+end_barrens: end_barrens
+warm_ocean: warm_ocean
+lukewarm_ocean: lukewarm_ocean
+cold_ocean: cold_ocean
+deep_warm_ocean: deep_warm_ocean
+deep_lukewarm_ocean: deep_lukewarm_ocean
+deep_cold_ocean: deep_cold_ocean
+deep_frozen_ocean: deep_frozen_ocean
+mutated_plains: sunflower_plains
+mutated_desert: desert_lakes
+mutated_extreme_hills: gravelly_mountains
+mutated_forest: flower_forest
+mutated_taiga: taiga_mountains
+mutated_swampland: swamp_hills
+mutated_ice_flats: ice_spikes
+mutated_jungle: modified_jungle
+mutated_jungle_edge: modified_jungle_edge
+mutated_birch_forest: tall_birch_forest
+mutated_birch_forest_hills: tall_birch_hills
+mutated_roofed_forest: dark_forest_hills
+mutated_taiga_cold: snowy_taiga_mountains
+mutated_redwood_taiga: giant_spruce_taiga
+mutated_redwood_taiga_hills: giant_spruce_taiga_hills
+mutated_extreme_hills_with_trees: modified_gravelly_mountains
+mutated_savanna: shattered_savanna
+mutated_savanna_rock: shattered_savanna_plateau
+mutated_mesa: eroded_badlands
+mutated_mesa_rock: modified_wooded_badlands_plateau
+mutated_mesa_clear_rock: modified_badlands_plateau
+bamboo_jungle: bamboo_jungle
+bamboo_jungle_hills: bamboo_jungle_hills
+soul_sand_valley: soul_sand_valley
+crimson_forest: crimson_forest
+warped_forest: warped_forest
+basalt_deltas: basalt_deltas
+dripstone_caves: dripstone_caves
+lush_caves: lush_caves
