--- a/src/fabric-1.17.1/mappings/gamerules.yaml
+++ b/src/fabric-1.17.1/mappings/gamerules.yaml
@@ -1,6 +1,6 @@
 _default: null
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@NAMEGameRule.gamerule"
+_mcreator_map_template: "@JavaModNameGameRules.@REGISTRYNAME"
 ANNOUNCE_ADVANCEMENTS: GameRules.ANNOUNCE_ADVANCEMENTS
 COMMAND_BLOCK_OUTPUT: GameRules.COMMAND_BLOCK_OUTPUT
 DISABLE_ELYTRA_MOVEMENT_CHECK: GameRules.DISABLE_ELYTRA_MOVEMENT_CHECK
@@ -34,3 +34,5 @@ DO_PATROL_SPAWNING: GameRules.DO_PATROL_SPAWNING
 DO_TRADER_SPAWNING: GameRules.DO_TRADER_SPAWNING
 FORGIVE_DEAD_PLAYERS: GameRules.FORGIVE_DEAD_PLAYERS
 UNIVERSAL_ANGER: GameRules.UNIVERSAL_ANGER
+PLAYERS_SLEEPING_PERCENTAGE: GameRules.PLAYERS_SLEEPING_PERCENTAGE
+FREEZE_DAMAGE: GameRules.RFREEZE_DAMAGE
