--- a/src/fabric-1.17.1/mappings/materials.yaml
+++ b/src/fabric-1.17.1/mappings/materials.yaml
@@ -43,3 +43,8 @@ BARRIER: BARRIER
 PISTON: PISTON
 NETHER_PLANTS: NETHER_SHOOTS
 NETHER_WOOD: NETHER_WOOD
+SCULK: SCULK
+BUILDABLE_GLASS: REDSTONE_LAMP
+MOSS_BLOCK: MOSS_BLOCK
+AMETHYST: AMETHYST
+POWDER_SNOW: POWDER_SNOW
