--- a/src/fabric-1.17.1/mappings/mobspawntypes.yaml
+++ b/src/fabric-1.17.1/mappings/mobspawntypes.yaml
@@ -4,4 +4,5 @@ creature: SpawnGroup.CREATURE
 ambient: SpawnGroup.AMBIENT
 waterCreature: SpawnGroup.WATER_CREATURE
 waterAmbient: SpawnGroup.WATER_AMBIENT
+undergroundWaterCreature: SpawnGroup.UNDERGROUND_WATER_CREATURE
 misc: SpawnGroup.MISC
