--- a/src/fabric-1.17.1/mappings/particles.yaml
+++ b/src/fabric-1.17.1/mappings/particles.yaml
@@ -1,5 +1,5 @@
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "ClientInit.@NAME_PARTICLE"
+_mcreator_map_template: "@JavaModNameParticles.@REGISTRYNAME"
 _default: ParticleTypes.CRIT
 SPELL_MOB_AMBIENT: ParticleTypes.AMBIENT_ENTITY_EFFECT
 VILLAGER_ANGRY: ParticleTypes.ANGRY_VILLAGER
@@ -69,6 +69,18 @@ FALLING_OBSIDIAN_TEAR: ParticleTypes.FALLING_OBSIDIAN_TEAR
 LANDING_OBSIDIAN_TEAR: ParticleTypes.LANDING_OBSIDIAN_TEAR
 REVERSE_PORTAL: ParticleTypes.REVERSE_PORTAL
 WHITE_ASH: ParticleTypes.WHITE_ASH
+SMALL_FLAME: ParticleTypes.SMALL_FLAME
+SNOWFLAKE: ParticleTypes.SNOWFLAKE
+DRIPPING_DRIPSTONE_LAVA: ParticleTypes.DRIPPING_DRIPSTONE_LAVA
+FALLING_DRIPSTONE_LAVA: ParticleTypes.FALLING_DRIPSTONE_LAVA
+DRIPPING_DRIPSTONE_WATER: ParticleTypes.DRIPPING_DRIPSTONE_WATER
+FALLING_DRIPSTONE_WATER: ParticleTypes.FALLING_DRIPSTONE_WATER
+GLOW_SQUID_INK: ParticleTypes.GLOW_SQUID_INK
+GLOW: ParticleTypes.GLOW
+WAX_ON: ParticleTypes.WAX_ON
+WAX_OFF: ParticleTypes.WAX_OFF
+ELECTRIC_SPARK: ParticleTypes.ELECTRIC_SPARK
+SCRAPE: ParticleTypes.SCRAPE
 SUSPENDED_DEPTH: ParticleTypes.UNDERWATER # Legacy Mapping
 SPELL_MOB: ParticleTypes.WITCH # Legacy Mapping
 SNOW_SHOVEL: ParticleTypes.ITEM_SNOWBALL # Legacy Mapping
