--- a/src/fabric-1.17.1/mappings/enchantments.yaml
+++ b/src/fabric-1.17.1/mappings/enchantments.yaml
@@ -1,6 +1,6 @@
-_default: EFFICIENCY
+_default: Enchantments.EFFICIENCY
 _mcreator_prefix: "CUSTOM:"
-_mcreator_map_template: "@JavaModName.@NAME_ENCH"
+_mcreator_map_template: "@JavaModNameEnchantments.@REGISTRYNAME"
 PROTECTION: Enchantments.PROTECTION
 FIRE_PROTECTION: Enchantments.FIRE_PROTECTION
 FEATHER_FALLING: Enchantments.FEATHER_FALLING
