--- a/src/fabric-1.17.1/mappings/sounds.yaml
+++ b/src/fabric-1.17.1/mappings/sounds.yaml
@@ -134,6 +134,10 @@ block.tripwire.click_on: block.tripwire.click_on
 block.tripwire.detach: block.tripwire.detach
 block.water.ambient: block.water.ambient
 block.waterlily.place: block.lily_pad.place
+block.vine.break: block.vine.break
+block.vine.fall: block.vine.fall
+block.vine.hit: block.vine.hit
+block.vine.place: block.vine.place
 block.vine.step: block.vine.step
 block.wood.break: block.wood.break
 block.wood.fall: block.wood.fall
@@ -331,6 +335,7 @@ entity.magmacube.hurt: entity.magma_cube.hurt
 entity.magmacube.jump: entity.magma_cube.jump
 entity.magmacube.squish: entity.magma_cube.squish
 entity.minecart.inside: entity.minecart.inside
+entity.minecart.inside.underwater: entity.minecart.inside.underwater
 entity.minecart.riding: entity.minecart.riding
 entity.mooshroom.shear: entity.mooshroom.shear
 entity.mule.ambient: entity.mule.ambient
@@ -402,6 +407,7 @@ entity.player.death: entity.player.death
 entity.player.hurt: entity.player.hurt
 entity.player.hurt_drown: entity.player.hurt_drown
 entity.player.hurt_on_fire: entity.player.hurt_on_fire
+entity.player.hurt_freeze: entity.player.hurt_freeze
 entity.player.levelup: entity.player.levelup
 entity.player.small_fall: entity.player.small_fall
 entity.player.splash: entity.player.splash
@@ -437,6 +443,7 @@ entity.silverfish.death: entity.silverfish.death
 entity.silverfish.hurt: entity.silverfish.hurt
 entity.silverfish.step: entity.silverfish.step
 entity.skeleton.ambient: entity.skeleton.ambient
+entity.skeleton.converted_to_stray: entity.skeleton.converted_to_stray
 entity.skeleton.death: entity.skeleton.death
 entity.skeleton.hurt: entity.skeleton.hurt
 entity.skeleton.shoot: entity.skeleton.shoot
@@ -580,6 +587,7 @@ ui.toast.out: ui.toast.out
 ui.toast.challenge_complete: ui.toast.challenge_complete
 weather.rain: weather.rain
 weather.rain.above: weather.rain.above
+item.axe.scrape: item.axe.scrape
 item.axe.strip: item.axe.strip
 block.bamboo.break: block.bamboo.break
 block.bamboo.fall: block.bamboo.fall
@@ -998,3 +1006,193 @@ entity.zoglin.attack: entity.zoglin.attack
 entity.zoglin.death: entity.zoglin.death
 entity.zoglin.hurt: entity.zoglin.hurt
 entity.zoglin.step: entity.zoglin.step
+block.amethyst_block.break: block.amethyst_block.break
+block.amethyst_block.chime: block.amethyst_block.chime
+block.amethyst_block.fall: block.amethyst_block.fall
+block.amethyst_block.hit: block.amethyst_block.hit
+block.amethyst_block.place: block.amethyst_block.place
+block.amethyst_block.step: block.amethyst_block.step
+block.amethyst_cluster.break: block.amethyst_cluster.break
+block.amethyst_cluster.fall: block.amethyst_cluster.fall
+block.amethyst_cluster.hit: block.amethyst_cluster.hit
+block.amethyst_cluster.place: block.amethyst_cluster.place
+block.amethyst_cluster.step: block.amethyst_cluster.step
+item.axe.wax_off: item.axe.wax_off
+item.honeycomb.wax_on: item.honeycomb.wax_on
+entity.axolotl.attack: entity.axolotl.attack
+entity.axolotl.death: entity.axolotl.death
+entity.axolotl.hurt: entity.axolotl.hurt
+entity.axolotl.idle_air: entity.axolotl.idle_air
+entity.axolotl.idle_water: entity.axolotl.idle_water
+entity.axolotl.splash: entity.axolotl.splash
+entity.axolotl.swim: entity.axolotl.swim
+block.azalea.break: block.azalea.break
+block.azalea.fall: block.azalea.fall
+block.azalea.hit: block.azalea.hit
+block.azalea.place: block.azalea.place
+block.azalea.step: block.azalea.step
+block.azalea_leaves.break: block.azalea_leaves.break
+block.azalea_leaves.fall: block.azalea_leaves.fall
+block.azalea_leaves.hit: block.azalea_leaves.hit
+block.azalea_leaves.place: block.azalea_leaves.place
+block.azalea_leaves.step: block.azalea_leaves.step
+block.big_dripleaf.break: block.big_dripleaf.break
+block.big_dripleaf.fall: block.big_dripleaf.fall
+block.big_dripleaf.hit: block.big_dripleaf.hit
+block.big_dripleaf.place: block.big_dripleaf.place
+block.big_dripleaf.step: block.big_dripleaf.step
+block.small_dripleaf.break: block.small_dripleaf.break
+block.small_dripleaf.fall: block.small_dripleaf.fall
+block.small_dripleaf.hit: block.small_dripleaf.hit
+block.small_dripleaf.place: block.small_dripleaf.place
+block.small_dripleaf.step: block.small_dripleaf.step
+item.bucket.empty_powder_snow: item.bucket.empty_powder_snow
+item.bucket.fill_axolotl: item.bucket.fill_axolotl
+item.bucket.empty_axolotl: item.bucket.empty_axolotl
+item.bucket.fill_powder_snow: item.bucket.fill_powder_snow
+block.cake.add_candle: block.cake.add_candle
+block.calcite.break: block.calcite.break
+block.calcite.fall: block.calcite.fall
+block.calcite.hit: block.calcite.hit
+block.calcite.place: block.calcite.place
+block.calcite.step: block.calcite.step
+block.candle.ambient: block.candle.ambient
+block.candle.break: block.candle.break
+block.candle.extinguish: block.candle.extinguish
+block.candle.fall: block.candle.fall
+block.candle.hit: block.candle.hit
+block.candle.place: block.candle.place
+block.candle.step: block.candle.step
+block.cave_vines.break: block.cave_vines.break
+block.cave_vines.fall: block.cave_vines.fall
+block.cave_vines.hit: block.cave_vines.hit
+block.cave_vines.pick_berries: block.cave_vines.pick_berries
+block.cave_vines.place: block.cave_vines.place
+block.cave_vines.step: block.cave_vines.step
+block.copper.break: block.copper.break
+block.copper.fall: block.copper.fall
+block.copper.hit: block.copper.hit
+block.copper.place: block.copper.place
+block.copper.step: block.copper.step
+block.deepslate_bricks.break: block.deepslate_bricks.break
+block.deepslate_bricks.fall: block.deepslate_bricks.fall
+block.deepslate_bricks.hit: block.deepslate_bricks.hit
+block.deepslate_bricks.place: block.deepslate_bricks.place
+block.deepslate_bricks.step: block.deepslate_bricks.step
+block.deepslate.break: block.deepslate.break
+block.deepslate.fall: block.deepslate.fall
+block.deepslate.hit: block.deepslate.hit
+block.deepslate.place: block.deepslate.place
+block.deepslate.step: block.deepslate.step
+block.deepslate_tiles.break: block.deepslate_tiles.break
+block.deepslate_tiles.fall: block.deepslate_tiles.fall
+block.deepslate_tiles.hit: block.deepslate_tiles.hit
+block.deepslate_tiles.place: block.deepslate_tiles.place
+block.deepslate_tiles.step: block.deepslate_tiles.step
+block.dripstone_block.break: block.dripstone_block.break
+block.dripstone_block.fall: block.dripstone_block.fall
+block.dripstone_block.hit: block.dripstone_block.hit
+block.dripstone_block.place: block.dripstone_block.place
+block.dripstone_block.step: block.dripstone_block.step
+block.pointed_dripstone.break: block.pointed_dripstone.break
+block.pointed_dripstone.fall: block.pointed_dripstone.fall
+block.pointed_dripstone.hit: block.pointed_dripstone.hit
+block.pointed_dripstone.place: block.pointed_dripstone.place
+block.pointed_dripstone.step: block.pointed_dripstone.step
+block.pointed_dripstone.land: block.pointed_dripstone.land
+block.pointed_dripstone.drip_lava: block.pointed_dripstone.drip_lava
+block.pointed_dripstone.drip_water: block.pointed_dripstone.drip_water
+block.pointed_dripstone.drip_lava_into_cauldron: block.pointed_dripstone.drip_lava_into_cauldron
+block.pointed_dripstone.drip_water_into_cauldron: block.pointed_dripstone.drip_water_into_cauldron
+block.big_dripleaf.tilt_down: block.big_dripleaf.tilt_down
+block.big_dripleaf.tilt_up: block.big_dripleaf.tilt_up
+block.flowering_azalea.break: block.flowering_azalea.break
+block.flowering_azalea.fall: block.flowering_azalea.fall
+block.flowering_azalea.hit: block.flowering_azalea.hit
+block.flowering_azalea.place: block.flowering_azalea.place
+block.flowering_azalea.step: block.flowering_azalea.step
+item.ink_sac.use: item.ink_sac.use
+item.glow_ink_sac.use: item.glow_ink_sac.use
+entity.glow_item_frame.add_item: entity.glow_item_frame.add_item
+entity.glow_item_frame.break: entity.glow_item_frame.break
+entity.glow_item_frame.place: entity.glow_item_frame.place
+entity.glow_item_frame.remove_item: entity.glow_item_frame.remove_item
+entity.glow_item_frame.rotate_item: entity.glow_item_frame.rotate_item
+entity.glow_squid.ambient: entity.glow_squid.ambient
+entity.glow_squid.death: entity.glow_squid.death
+entity.glow_squid.hurt: entity.glow_squid.hurt
+entity.glow_squid.squirt: entity.glow_squid.squirt
+entity.goat.ambient: entity.goat.ambient
+entity.goat.death: entity.goat.death
+entity.goat.eat: entity.goat.eat
+entity.goat.hurt: entity.goat.hurt
+entity.goat.long_jump: entity.goat.long_jump
+entity.goat.milk: entity.goat.milk
+entity.goat.prepare_ram: entity.goat.prepare_ram
+entity.goat.ram_impact: entity.goat.ram_impact
+entity.goat.screaming.ambient: entity.goat.screaming.ambient
+entity.goat.screaming.death: entity.goat.screaming.death
+entity.goat.screaming.eat: entity.goat.screaming.eat
+entity.goat.screaming.hurt: entity.goat.screaming.hurt
+entity.goat.screaming.long_jump: entity.goat.screaming.long_jump
+entity.goat.screaming.milk: entity.goat.screaming.milk
+entity.goat.screaming.prepare_ram: entity.goat.screaming.prepare_ram
+entity.goat.screaming.ram_impact: entity.goat.screaming.ram_impact
+entity.goat.step: entity.goat.step
+block.hanging_roots.break: block.hanging_roots.break
+block.hanging_roots.fall: block.hanging_roots.fall
+block.hanging_roots.hit: block.hanging_roots.hit
+block.hanging_roots.place: block.hanging_roots.place
+block.hanging_roots.step: block.hanging_roots.step
+block.large_amethyst_bud.break: block.large_amethyst_bud.break
+block.large_amethyst_bud.place: block.large_amethyst_bud.place
+block.medium_amethyst_bud.break: block.medium_amethyst_bud.break
+block.medium_amethyst_bud.place: block.medium_amethyst_bud.place
+block.small_amethyst_bud.break: block.small_amethyst_bud.break
+block.small_amethyst_bud.place: block.small_amethyst_bud.place
+block.moss_carpet.break: block.moss_carpet.break
+block.moss_carpet.fall: block.moss_carpet.fall
+block.moss_carpet.hit: block.moss_carpet.hit
+block.moss_carpet.place: block.moss_carpet.place
+block.moss_carpet.step: block.moss_carpet.step
+block.moss.break: block.moss.break
+block.moss.fall: block.moss.fall
+block.moss.hit: block.moss.hit
+block.moss.place: block.moss.place
+block.moss.step: block.moss.step
+block.polished_deepslate.break: block.polished_deepslate.break
+block.polished_deepslate.fall: block.polished_deepslate.fall
+block.polished_deepslate.hit: block.polished_deepslate.hit
+block.polished_deepslate.place: block.polished_deepslate.place
+block.polished_deepslate.step: block.polished_deepslate.step
+block.powder_snow.break: block.powder_snow.break
+block.powder_snow.fall: block.powder_snow.fall
+block.powder_snow.hit: block.powder_snow.hit
+block.powder_snow.place: block.powder_snow.place
+block.powder_snow.step: block.powder_snow.step
+block.rooted_dirt.break: block.rooted_dirt.break
+block.rooted_dirt.fall: block.rooted_dirt.fall
+block.rooted_dirt.hit: block.rooted_dirt.hit
+block.rooted_dirt.place: block.rooted_dirt.place
+block.rooted_dirt.step: block.rooted_dirt.step
+block.sculk_sensor.clicking: block.sculk_sensor.clicking
+block.sculk_sensor.clicking_stop: block.sculk_sensor.clicking_stop
+block.sculk_sensor.break: block.sculk_sensor.break
+block.sculk_sensor.fall: block.sculk_sensor.fall
+block.sculk_sensor.hit: block.sculk_sensor.hit
+block.sculk_sensor.place: block.sculk_sensor.place
+block.sculk_sensor.step: block.sculk_sensor.step
+block.spore_blossom.break: block.spore_blossom.break
+block.spore_blossom.fall: block.spore_blossom.fall
+block.spore_blossom.hit: block.spore_blossom.hit
+block.spore_blossom.place: block.spore_blossom.place
+block.spore_blossom.step: block.spore_blossom.step
+item.spyglass.use: item.spyglass.use
+item.spyglass.stop_using: item.spyglass.stop_using
+block.tuff.break: block.tuff.break
+block.tuff.fall: block.tuff.fall
+block.tuff.hit: block.tuff.hit
+block.tuff.place: block.tuff.place
+block.tuff.step: block.tuff.step
+item.bone_meal.use: item.bone_meal.use
+item.dye.use: item.dye.use
