--- a/src/fabric-1.17.1/mappings/stepsounds.yaml
+++ b/src/fabric-1.17.1/mappings/stepsounds.yaml
@@ -9,6 +9,7 @@ GLASS: GLASS
 CLOTH: WOOL
 SAND: SAND
 SNOW: SNOW
+POWDER_SNOW: POWDER_SNOW
 LADDER: LADDER
 ANVIL: ANVIL
 SLIME: SLIME
@@ -46,3 +47,31 @@ LODESTONE: LODESTONE
 CHAIN: CHAIN
 NETHER_GOLD: NETHER_GOLD_ORE
 GILDED_BLACKSTONE: GILDED_BLACKSTONE
+CANDLE: CANDLE
+AMETHYST_BLOCK: AMETHYST_BLOCK
+AMETHYST_CLUSTER: AMETHYST_CLUSTER
+SMALL_AMETHYST_BUD: SMALL_AMETHYST_BUD
+MEDIUM_AMETHYST_BUD: MEDIUM_AMETHYST_BUD
+LARGE_AMETHYST_BUD: LARGE_AMETHYST_BUD
+TUFF: TUFF
+CALCITE: CALCITE
+DRIPSTONE_BLOCK: DRIPSTONE_BLOCK
+POINTED_DRIPSTONE: POINTED_DRIPSTONE
+COPPER: COPPER
+CAVE_VINES: CAVE_VINES
+SPORE_BLOSSOM: SPORE_BLOSSOM
+AZALEA: AZALEA
+FLOWERING_AZALEA: FLOWERING_AZALEA
+MOSS_CARPET: MOSS_CARPET
+MOSS_BLOCK: MOSS_BLOCK
+BIG_DRIPLEAF: BIG_DRIPLEAF
+SMALL_DRIPLEAF: SMALL_DRIPLEAF
+ROOTED_DIRT: ROOTED_DIRT
+HANGING_ROOTS: HANGING_ROOTS
+AZALEA_LEAVES: AZALEA_LEAVES
+SCULK_SENSOR: SCULK_SENSOR
+GLOW_LICHEN: GLOW_LICHEN
+DEEPSLATE: DEEPSLATE
+DEEPSLATE_BRICKS: DEEPSLATE_BRICKS
+DEEPSLATE_TILES: DEEPSLATE_TILES
+POLISHED_DEEPSLATE: POLISHED_DEEPSLATE
